Add data services to view

--- a/dashboards/github-status.erb
+++ b/dashboards/github-status.erb
@@ -1,8 +1,11 @@
 <% content_for :title do %>Copyright Hub Git Status<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
       <div data-id="github_releases_and_tags" data-view="Table"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="data_services" data-view="Table"></div>
     </li>
   </ul>
 </div>
